# dash-reportbuilder

./: .gitignore  CLAUDE.md  LICENSE  mkdocs.yaml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: index.md  user_guide.md
docs/api/: backends.md  elements.md  index.md  model.md  protocols.md  store.md  templates.md  viewer.md
examples/: basic_report.py
scripts/: build_example_templates.py
src/dash_reportbuilder/: __init__.py  _ids.py  _js.py  _viewer_callbacks.py  _viewer_layout.py  capture.py  elements.py  model.py  protocols.py  store.py  viewer.py
src/dash_reportbuilder/backends/: __init__.py  _docx.py  _html.py  _image_zip.py  _pptx.py  _typst.py
src/dash_reportbuilder/export/: __init__.py  _base.py  _docx.py  _pptx.py  _typst.py
src/dash_reportbuilder/templates/: __init__.py  example.docx  example.html  example.pptx  example.typ
tests/dash_reportbuilder/: conftest.py  test_capture.py  test_cross_backend.py  test_example_templates.py  test_export_docx.py  test_export_image_zip.py  test_export_pptx.py  test_export_typst.py  test_extensibility.py  test_model.py  test_store.py  test_viewer.py
tests/integration/: conftest.py  test_reportbuilder_integration.py
tests/integration/assets/: reportbuilder.js
tests/test_dash_reportbuilder/: conftest.py  test_capture.py  test_cross_backend.py  test_example_templates.py  test_export_docx.py  test_export_html.py  test_export_image_zip.py  test_export_pptx.py  test_export_typst.py  test_model.py  test_store.py  test_typst_compile.py
