[project]
name = "dash-reportbuilder"
dynamic = ["version"]
description = "Capture, assemble, and export reports from Plotly Dash applications"
keywords = ["plotly", "dash", "report", "export", "docx", "pptx", "typst", "pdf"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Simon Niederberger" }]
requires-python = ">=3.10"
dependencies = [
    "dash>=4.0.0",
    "dash-capture",
]

[project.optional-dependencies]
docx = ["python-docx>=1.1.0"]
pptx = ["python-pptx>=1.0.0"]
all = ["python-docx>=1.1.0", "python-pptx>=1.0.0"]

[project.urls]
Homepage = "https://github.com/saemeon/dash-reportbuilder"
Repository = "https://github.com/saemeon/dash-reportbuilder"

[dependency-groups]
test = ["pytest", "pytest-cov"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mike"]
dev = [
    "ruff",
    "prek",
    "ty",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/dash_reportbuilder/_version.py"

[tool.setuptools.dynamic]
version = { attr = "dash_reportbuilder._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["dash_reportbuilder*"]
namespaces = false

[tool.setuptools.package-data]
dash_reportbuilder = [
    "py.typed",
    "assets/*.js",
    "templates/example.typ",
    "templates/example.docx",
    "templates/example.pptx",
    "templates/example.html",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "--cov=src", "--cov-report=term-missing"]
norecursedirs = ".*"
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore:HTTPResponse.getheader\\(\\) is deprecated:DeprecationWarning:selenium.*",
]

[tool.ty.src]
include = ["src"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle
    "F",    # pyflakes
    "N",    # PEP8 naming
    "D",    # pydocstyle
    "PD",   # pandas linter
    "NPY",  # numpy linter
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PERF", # perflint
]
ignore = [
    "E501",   # line length handled by formatter
    "D100",   # no module docstrings required
    "D104",   # no package docstrings required
    "D107",   # class-level docstring preferred over __init__
    "PD901",  # allow naming dataframes 'df'
    "NPY002", # numpy legacy
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "D400"]

[tool.ruff.lint.extend-per-file-ignores]
"examples/*" = ["D400"]
"tests/**/*.py" = ["D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
